--- a/portfolio.html
+++ b/portfolio.html
@@ -1,107 +1,140 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <header class="header">
-        <nav>
-            <a href="/index.html" lang="en" class="header-logo"><span class="logo-web">Web</span>Studio</a>
-            <ul class="header-list list">
-                <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
-                <li class="header-item"><a href="./portfolio.html" class="header-link link current">Портфолио</a></li>
-                <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
-            </ul>
-        </nav>
-        <ul class="header-contacts-list list">
-            <li class="header-contact-item"><a href="mailto:info@devstudio.com" class="header-contact link">info@devstudio.com</a></li>
-            <li class="header-contact-item"><a href="tel:+380961111111" class="header-contact link">+38 096 111 11 11</a></li>
-        </ul>   
+        <div class="container header-container">
+            <nav>
+                <a href="/index.html" lang="en" class="header-logo"><span class="logo-web">Web</span>Studio</a>
+                <ul class="header-list list">
+                    <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
+                    <li class="header-item"><a href="./portfolio.html" class="header-link link current">Портфолио</a>
+                    </li>
+                    <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
+                </ul>
+            </nav>
+            <div class="header-contacts">
+                <ul class="header-contacts-list list">
+                    <li class="header-contact-item"><a href="mailto:info@devstudio.com"
+                            class="header-contact link">info@devstudio.com</a></li>
+                    <li class="header-contact-item"><a href="tel:+380961111111" class="header-contact link">+38 096 111
+                            11
+                            11</a></li>
+                </ul>
+            </div>
+        </div>
     </header>
     <main>
         <section class="projects">
-            <h1 class="visually-hidden">Проекты</h1>
-            <ul class="projects-btn-list list">
-                <li class="projects-btn-item"><button type="button" class="projects-btn btn">Все</button></li>
-                <li class="projects-btn-item"><button type="button" class="projects-btn btn">Веб-сайты</button></li>
-                <li class="projects-btn-item"><button type="button" class="projects-btn btn">Приложения</button></li>
-                <li class="projects-btn-item"><button type="button" class="projects-btn btn">Дизайн</button></li>
-                <li class="projects-btn-item"><button type="button" class="projects-btn btn">Маркетинг</button></li>
-            </ul>
-            <ul class="projects-list list">
-                <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img src="./images/laptop.jpg" alt="laptop" width="370" height="294"></a>
-                <h2 class="projects-title">
-                    Технокряк
-                </h2>
-                <p class="projects-text">Веб-сайт</p>
-                </li>
-                <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img src="./images/basket.jpg" alt="basketball" width="370" height="294"></a>
-                <h2 class="projects-title">
-                    Постер New Orlean vs Golden Star
-                </h2>
-                <p class="projects-text">Дизайн</p>
-                </li>
-                <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img src="./images/fish.jpg" alt="a fish" width="370" height="294"></a>
-                <h2 class="projects-title">
-                    Ресторан Seafood
-                </h2>
-                <p class="projects-text">Приложение</p>
-                </li>
-                <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img src="./images/headphones.jpg" alt="headphones" width="370" height="294"></a>
-                <h2 class="projects-title">
-                    Проект Prime
-                </h2>
-                <p class="projects-text">Маркетинг</p>
-                </li>
-                <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img src="./images/bricks.jpg" alt="bricks" width="370" height="294"></a>
-                <h2 class="projects-title">
-                    Проект Boxes
-                </h2>
-                <p class="projects-text">Приложение</p>
-                </li>
-                <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img src="./images/mac.jpg" alt="mac" width="370" height="294"></a>
-                <h2 class="projects-title">
-                    Inspiration has no Borders
-                </h2>
-                <p class="projects-text">Веб-сайт</p>
-                </li>
-                <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img src="./images/book.jpg" alt="a book" width="370" height="294"></a>
-                <h2 class="projects-title">
-                    Издание Limited Edition
-                </h2>
-                <p class="projects-text">Дизайн</p>
-                </li>
-                <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img src="./images/tag.jpg" alt="a tag" width="370" height="294"></a>
-                <h2 class="projects-title">
-                    Проект LAB
-                </h2>
-                <p class="projects-text">Маркетинг</p>
-                </li>
-                <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img src="./images/glaptop.jpg" alt="guy with a laptop" width="370" height="294"></a>
-                <h2 class="projects-title">
-                    Growing Business
-                </h2>
-                <p class="projects-text">Приложение</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h1 class="visually-hidden">Проекты</h1>
+                <ul class="projects-btn-list list">
+                    <li class="projects-btn-item"><button type="button" class="projects-btn btn">Все</button></li>
+                    <li class="projects-btn-item"><button type="button" class="projects-btn btn">Веб-сайты</button></li>
+                    <li class="projects-btn-item"><button type="button" class="projects-btn btn">Приложения</button>
+                    </li>
+                    <li class="projects-btn-item"><button type="button" class="projects-btn btn">Дизайн</button></li>
+                    <li class="projects-btn-item"><button type="button" class="projects-btn btn">Маркетинг</button></li>
+                </ul>
+                <ul class="projects-list list">
+                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
+                                src="./images/laptop.jpg" alt="laptop" width="370" height="294"></a>
+                        <h2 class="projects-title">
+                            Технокряк
+                        </h2>
+                        <p class="projects-text">Веб-сайт</p>
+                    </li>
+                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
+                                src="./images/basket.jpg" alt="basketball" width="370" height="294"></a>
+                        <h2 class="projects-title">
+                            Постер New Orlean vs Golden Star
+                        </h2>
+                        <p class="projects-text">Дизайн</p>
+                    </li>
+                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
+                                src="./images/fish.jpg" alt="a fish" width="370" height="294"></a>
+                        <h2 class="projects-title">
+                            Ресторан Seafood
+                        </h2>
+                        <p class="projects-text">Приложение</p>
+                    </li>
+                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
+                                src="./images/headphones.jpg" alt="headphones" width="370" height="294"></a>
+                        <h2 class="projects-title">
+                            Проект Prime
+                        </h2>
+                        <p class="projects-text">Маркетинг</p>
+                    </li>
+                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
+                                src="./images/bricks.jpg" alt="bricks" width="370" height="294"></a>
+                        <h2 class="projects-title">
+                            Проект Boxes
+                        </h2>
+                        <p class="projects-text">Приложение</p>
+                    </li>
+                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
+                                src="./images/mac.jpg" alt="mac" width="370" height="294"></a>
+                        <h2 class="projects-title">
+                            Inspiration has no Borders
+                        </h2>
+                        <p class="projects-text">Веб-сайт</p>
+                    </li>
+                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
+                                src="./images/book.jpg" alt="a book" width="370" height="294"></a>
+                        <h2 class="projects-title">
+                            Издание Limited Edition
+                        </h2>
+                        <p class="projects-text">Дизайн</p>
+                    </li>
+                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
+                                src="./images/tag.jpg" alt="a tag" width="370" height="294"></a>
+                        <h2 class="projects-title">
+                            Проект LAB
+                        </h2>
+                        <p class="projects-text">Маркетинг</p>
+                    </li>
+                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
+                                src="./images/glaptop.jpg" alt="guy with a laptop" width="370" height="294"></a>
+                        <h2 class="projects-title">
+                            Growing Business
+                        </h2>
+                        <p class="projects-text">Приложение</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" lang="en" class="footer-logo"><span class="logo-web">Web</span>Studio</a>
-        <address class="address">
-            <ul class="address-list list">
-                <li class="address-item"><a href="https://bit.ly/3pXMvUd" target="_blank" class="address-address link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li class="address-item"><a href="mailto:info@example.com" class="address-link link">info@example.com</a></li>
-                <li class="address-item"><a href="tel:+380991111111" class="address-link link">+38 099 111 11 11</a></li>
-            </ul>
-    </address>
+        <div class="container">
+            <a href="./index.html" lang="en" class="footer-logo"><span class="logo-web">Web</span>Studio</a>
+            <address class="address">
+                <ul class="address-list list">
+                    <li class="address-item"><a href="https://bit.ly/3pXMvUd" target="_blank"
+                            class="address-address link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="address-item"><a href="mailto:info@example.com"
+                            class="address-link link">info@example.com</a></li>
+                    <li class="address-item"><a href="tel:+380991111111" class="address-link link">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
+
 </html>
