--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <body>
     <header class="header">
         <div class="container header-container">
-            <a href="/index.html" lang="en" class="header-logo"><span class="logo-web">Web</span>Studio</a>
-            <nav>
+            <nav><a href="/index.html" lang="en" class="header-logo"><span class="logo-web">Web</span>Studio</a>
                 <ul class="header-list list">
                     <li class="header-item"><a href="./index.html" class="header-link link current">Студия</a></li>
                     <li class="header-item"><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
@@ -44,7 +43,7 @@
             </div>
         </div>
         </section>
-        <section>
+        <section class="features">
             <div class="container">
             <h2 class="visually-hidden">Особенности</h2>
             <ul class="about-list list">
