--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container header-container">
@@ -25,92 +28,135 @@
                 </ul>
             </nav>
             <div class="header-contacts">
-            <ul class="header-contacts-list list">
-                <li class="header-contact-item"><a href="mailto:info@devstudio.com" class="header-contact link">info@devstudio.com</a></li>
-                <li class="header-contact-item mail"><a href="tel:+380961111111" class="header-contact link">+38 096 111 11 11</a></li>
-            </ul>  
-        </div> 
+                <ul class="header-contacts-list list">
+                    <li class="header-contact-item"><a href="mailto:info@devstudio.com"
+                            class="header-contact link">info@devstudio.com</a></li>
+                    <li class="header-contact-item mail"><a href="tel:+380961111111" class="header-contact link">+38 096
+                            111 11 11</a></li>
+                </ul>
+            </div>
         </div>
     </header>
     <main>
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-            <h1 class="hero-title">
-            Эффективные решения для вашего бизнеса
-            </h1>
-            <button type="button" class="hero-btn btn">Заказать услугу</button>
+                    <h1 class="hero-title">
+                        Эффективные решения для вашего бизнеса
+                    </h1>
+                    <button type="button" class="hero-btn btn">Заказать услугу</button>
+                </div>
             </div>
-        </div>
         </section>
         <section class="features">
             <div class="container">
-            <h2 class="visually-hidden">Особенности</h2>
-            <ul class="about-list list">
-                <li class="about-item">
-                    <h3 class="about-title">Внимание к деталям</h3>
-                    <p class="about-text">Идейные соображения, а также начало повседневной 
-                        работы по формированию позиции.
-                    </p>
-                </li>
-                <li class="about-item">
-                    <h3 class="about-title">Пунктуальность</h3>
-                    <p class="about-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li class="about-item">
-                    <h3 class="about-title">Планирование</h3>
-                    <p class="about-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li class="about-item">
-                    <h3 class="about-title">Современные технологии</h3>
-                    <p class="about-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-        </div>
+                <h2 class="visually-hidden">Особенности</h2>
+                <ul class="about-list list">
+                    <li class="about-item">
+                        <h3 class="about-title">Внимание к деталям</h3>
+                        <p class="about-text">Идейные соображения, а также начало повседневной
+                            работы по формированию позиции.
+                        </p>
+                    </li>
+                    <li class="about-item">
+                        <h3 class="about-title">Пунктуальность</h3>
+                        <p class="about-text">Задача организации, в особенности же рамки и место обучения кадров влечет
+                            за собой.</p>
+                    </li>
+                    <li class="about-item">
+                        <h3 class="about-title">Планирование</h3>
+                        <p class="about-text">Равным образом консультация с широким активом в значительной степени
+                            обуславливает.</p>
+                    </li>
+                    <li class="about-item">
+                        <h3 class="about-title">Современные технологии</h3>
+                        <p class="about-text">Значимость этих проблем настолько очевидна, что реализация плановых
+                            заданий.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="about-us">
             <div class="container">
-            <h2 class="about-us-title title">Чем мы занимаемся</h2>
-            <ul class="about-us-list list">
-                <li class="about-us-item">
-                    <img src="./images/img.jpg" alt="man with a ipad" width="370" height="294"/>
-                </li>
-                <li class="about-us-item"><img src="./images/img2.jpg" alt="man with a laptop" width="370" height="294"></li>
-                <li class="about-us-item"><img src="./images/img(1).jpg" alt="colop pannel" width="370" height="294"/></li>
-            </ul>
-        </div>
+                <h2 class="about-us-title title">Чем мы занимаемся</h2>
+                <ul class="about-us-list list">
+                    <li class="about-us-item">
+                        <img src="./images/img.jpg" alt="man with a ipad" width="370" height="294" />
+                    </li>
+                    <li class="about-us-item"><img src="./images/img2.jpg" alt="man with a laptop" width="370"
+                            height="294"></li>
+                    <li class="about-us-item"><img src="./images/img(1).jpg" alt="colop pannel" width="370"
+                            height="294" /></li>
+                </ul>
+            </div>
         </section>
         <section class="team">
             <div class="container">
-            <h2 class="team-title title">Наша команда</h2>
-            <ul class="team-list list">
-                <li class="team-item">
-                    <img src="./images/img3.jpg" alt="a man" width="270" height="260"/><h3 class="team-name">Игорь Демьяненко</h3><p class="team-text">Product Designer</p>  
-                </li>
-                <li class="team-item">
-                    <img src="./images/img1).jpg" alt="a woman" width="270" height="260"/><h3 class="team-name">Ольга Репина</h3><p class="team-text">Frontend Developer</p>  
-                </li>
-                <li class="team-item">
-                    <img src="./images/img(2).jpg" alt="a man in shirt" width="270" height="260"/><h3 class="team-name">Николай Тарасов</h3><p class="team-text">Marketing</p>  
-                </li>
-                <li class="team-item">
-                    <img src="./images/img(3).jpg" alt="a man with glasses" width="270" height="260"/><h3 class="team-name">Михаил Ермаков</h3><p class="team-text">UI Designer</p>  
-                </li>
-            </ul>
+                <h2 class="team-title title">Наша команда</h2>
+                <ul class="team-list list">
+                    <li class="team-item">
+                        <article class="team-card-full">
+                            <div class="team-card">
+                                <img src="./images/img3.jpg" alt="a man" width="270" height="260" />
+                            </div>
+                            <div class="team-card-content">
+                                <h3 class="team-name">Игорь Демьяненко</h3>
+                                <p class="team-text">Product Designer</p>
+                            </div>
+                        </article>
+                    </li>
+                    <li class="team-item">
+                        <article class="team-card-full">
+                            <div class="team-card">
+                                <img src="./images/img1).jpg" alt="a woman" width="270" height="260" />
+                            </div>
+                            <div class="team-card-content">
+                                <h3 class="team-name">Ольга Репина</h3>
+                                <p class="team-text">Frontend Developer</p>
+                            </div>
+                        </article>
+                    </li>
+                    <li class="team-item">
+                        <article class="team-card-full">
+                            <div class="team-card">
+                                <img src="./images/img(2).jpg" alt="a man in shirt" width="270" height="260" />
+                            </div>
+                            <div class="team-card-content">
+                                <h3 class="team-name">Николай Тарасов</h3>
+                                <p class="team-text">Marketing</p>
+                            </div>
+                        </article>
+                    </li>
+                    <li class="team-item">
+                        <article class="team-card-full">
+                            <div class="team-card">
+                                <img src="./images/img(3).jpg" alt="a man with glasses" width="270" height="260" />
+                            </div>
+                            <div class="team-card-content">
+                                <h3 class="team-name">Михаил Ермаков</h3>
+                                <p class="team-text">UI Designer</p>
+                            </div>
+                        </article>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
     <footer class="footer">
         <div class="container">
-        <a href="./index.html" lang="en" class="footer-logo"><span class="logo-web">Web</span>Studio</a>
-        <address class="address">
-            <ul class="address-list list">
-                <li class="address-item"><a href="https://bit.ly/3pXMvUd" target="_blank" class="address-address link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li class="address-item"><a href="mailto:info@example.com" class="address-link link">info@example.com</a></li>
-                <li class="address-item"><a href="tel:+380991111111" class="address-link link">+38 099 111 11 11</a></li>
-            </ul>
-    </address>
-</div>
+            <a href="./index.html" lang="en" class="footer-logo"><span class="logo-web">Web</span>Studio</a>
+            <address class="address">
+                <ul class="address-list list">
+                    <li class="address-item"><a href="https://bit.ly/3pXMvUd" target="_blank"
+                            class="address-address link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="address-item"><a href="mailto:info@example.com"
+                            class="address-link link">info@example.com</a></li>
+                    <li class="address-item"><a href="tel:+380991111111" class="address-link link">+38 099 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
+
 </html>
