--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,7 @@
 <body>
     <header class="header">
         <div class="container header-container">
-            <nav>
-                <a href="/index.html" lang="en" class="header-logo"><span class="logo-web">Web</span>Studio</a>
+            <nav><a href="/index.html" lang="en" class="header-logo"><span class="logo-web">Web</span>Studio</a>
                 <ul class="header-list list">
                     <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
                     <li class="header-item"><a href="./portfolio.html" class="header-link link current">Портфолио</a>
@@ -33,12 +32,12 @@
                 <ul class="header-contacts-list list">
                     <li class="header-contact-item"><a href="mailto:info@devstudio.com"
                             class="header-contact link">info@devstudio.com</a></li>
-                    <li class="header-contact-item"><a href="tel:+380961111111" class="header-contact link">+38 096 111
-                            11
-                            11</a></li>
+                    <li class="header-contact-item mail"><a href="tel:+380961111111" class="header-contact link">+38 096
+                            111 11 11</a></li>
                 </ul>
             </div>
         </div>
+    </header>
     </header>
     <main>
         <section class="projects">
@@ -53,68 +52,130 @@
                     <li class="projects-btn-item"><button type="button" class="projects-btn btn">Маркетинг</button></li>
                 </ul>
                 <ul class="projects-list list">
-                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
-                                src="./images/laptop.jpg" alt="laptop" width="370" height="294"></a>
-                        <h2 class="projects-title">
-                            Технокряк
-                        </h2>
-                        <p class="projects-text">Веб-сайт</p>
+                    <li class="projects-item">
+                        <article class="card">
+                            <div class="card-thumb">
+                                <a rel="preconnect" href="https://www.google.com/">
+                                    <img src="./images/laptop.jpg" alt="laptop" width="370" height="294"></a>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="projects-title">
+                                    Технокряк
+                                </h2>
+                                <p class="projects-text">Веб-сайт</p>
+                            </div>
+                        </article>
                     </li>
-                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
-                                src="./images/basket.jpg" alt="basketball" width="370" height="294"></a>
-                        <h2 class="projects-title">
-                            Постер New Orlean vs Golden Star
-                        </h2>
-                        <p class="projects-text">Дизайн</p>
+                    <li class="projects-item">
+                        <article class="card">
+                            <div class="card-thumb">
+                                <a rel="preconnect" href="https://www.google.com/"><img src="./images/basket.jpg"
+                                        alt="basketball" width="370" height="294"></a>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="projects-title">
+                                    Постер New Orlean vs Golden Star
+                                </h2>
+                                <p class="projects-text">Дизайн</p>
+                            </div>
+                        </article>
                     </li>
-                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
-                                src="./images/fish.jpg" alt="a fish" width="370" height="294"></a>
-                        <h2 class="projects-title">
-                            Ресторан Seafood
-                        </h2>
-                        <p class="projects-text">Приложение</p>
+                    <li class="projects-item">
+                        <article class="card">
+                            <div class="card-thumb"><a rel="preconnect" href="https://www.google.com/"><img
+                                        src="./images/fish.jpg" alt="a fish" width="370" height="294"></a>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="projects-title">
+                                    Ресторан Seafood
+                                </h2>
+                                <p class="projects-text">Приложение</p>
+                            </div>
+                        </article>
                     </li>
-                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
-                                src="./images/headphones.jpg" alt="headphones" width="370" height="294"></a>
-                        <h2 class="projects-title">
-                            Проект Prime
-                        </h2>
-                        <p class="projects-text">Маркетинг</p>
+                    <li class="projects-item">
+                        <article class="card">
+                            <div class="card-thumb">
+                                <a rel="preconnect" href="https://www.google.com/"><img src="./images/headphones.jpg"
+                                        alt="headphones" width="370" height="294"></a>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="projects-title">
+                                    Проект Prime
+                                </h2>
+                                <p class="projects-text">Маркетинг</p>
+                            </div>
+                        </article>
                     </li>
-                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
-                                src="./images/bricks.jpg" alt="bricks" width="370" height="294"></a>
-                        <h2 class="projects-title">
-                            Проект Boxes
-                        </h2>
-                        <p class="projects-text">Приложение</p>
+                    <li class="projects-item">
+                        <article class="card">
+                            <div class="card-thumb">
+                                <a rel="preconnect" href="https://www.google.com/"><img src="./images/bricks.jpg"
+                                        alt="bricks" width="370" height="294"></a>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="projects-title">
+                                    Проект Boxes
+                                </h2>
+                                <p class="projects-text">Приложение</p>
+                            </div>
+                        </article>
                     </li>
-                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
-                                src="./images/mac.jpg" alt="mac" width="370" height="294"></a>
-                        <h2 class="projects-title">
-                            Inspiration has no Borders
-                        </h2>
-                        <p class="projects-text">Веб-сайт</p>
+                    <li class="projects-item">
+                        <article class="card">
+                            <div class="card-thumb"><a rel="preconnect" href="https://www.google.com/"><img
+                                        src="./images/mac.jpg" alt="mac" width="370" height="294">
+                                </a>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="projects-title">
+                                    Inspiration has no Borders
+                                </h2>
+                                <p class="projects-text">Веб-сайт</p>
+                            </div>
+                        </article>
                     </li>
-                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
-                                src="./images/book.jpg" alt="a book" width="370" height="294"></a>
-                        <h2 class="projects-title">
-                            Издание Limited Edition
-                        </h2>
-                        <p class="projects-text">Дизайн</p>
+                    <li class="projects-item">
+                        <article class="card">
+                            <div class="card-thumb"><a rel="preconnect" href="https://www.google.com/"><img
+                                        src="./images/book.jpg" alt="a book" width="370" height="294">
+                                </a>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="projects-title">
+                                    Издание Limited Edition
+                                </h2>
+                                <p class="projects-text">Дизайн</p>
+                            </div>
+                        </article>
                     </li>
-                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
-                                src="./images/tag.jpg" alt="a tag" width="370" height="294"></a>
-                        <h2 class="projects-title">
-                            Проект LAB
-                        </h2>
-                        <p class="projects-text">Маркетинг</p>
+                    <li class="projects-item">
+                        <article class="card">
+                            <div class="card-thumb"><a rel="preconnect" href="https://www.google.com/"><img
+                                        src="./images/tag.jpg" alt="a tag" width="370" height="294">
+                                </a>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="projects-title">
+                                    Проект LAB
+                                </h2>
+                                <p class="projects-text">Маркетинг</p>
+                            </div>
+                        </article>
                     </li>
-                    <li class="projects-item"><a rel="preconnect" href="https://www.google.com/"><img
-                                src="./images/glaptop.jpg" alt="guy with a laptop" width="370" height="294"></a>
-                        <h2 class="projects-title">
-                            Growing Business
-                        </h2>
-                        <p class="projects-text">Приложение</p>
+                    <li class="projects-item">
+                        <article class="card">
+                            <div class="card-thumb"><a rel="preconnect" href="https://www.google.com/"><img
+                                        src="./images/glaptop.jpg" alt="guy with a laptop" width="370" height="294">
+                                </a>
+                            </div>
+                            <div class="card-content">
+                                <h2 class="projects-title">
+                                    Growing Business
+                                </h2>
+                                <p class="projects-text">Приложение</p>
+                            </div>
+                        </article>
                     </li>
                 </ul>
             </div>
