--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <li class="team-item">
                         <article class="team-card-full">
                             <div class="team-card">
-                                <img src="./images/img(2).jpg" alt="a man in shirt" width="270" height="260" />
+                                <img src="./images/cardn3.jpg" alt="a man in shirt" width="270" height="260" />
                             </div>
                             <div class="team-card-content">
                                 <h3 class="team-name">Николай Тарасов</h3>
