--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header class="header">
         <div class="container header-container">
-            <nav><a href="/index.html" lang="en" class="header-logo"><span class="logo-web">Web</span>Studio</a>
+            <nav><a href="./index.html" lang="en" class="header-logo"><span class="logo-web">Web</span>Studio</a>
                 <ul class="header-list list">
                     <li class="header-item"><a href="./index.html" class="header-link link current">Студия</a></li>
                     <li class="header-item"><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
