--- a/portfolio.html
+++ b/portfolio.html
@@ -22,26 +22,16 @@
         <div class="container header-container">
             <nav><a href="./index.html" lang="en" class="header-logo"><span class="logo-web">Web</span>Studio</a>
                 <ul class="header-list list">
-                    <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
-                    <li class="header-item"><a href="./portfolio.html" class="header-link link current">Портфолио</a>
-                    </li>
+                    <li class="header-item"><a href="./index.html" class="header-link link current">Студия</a></li>
+                    <li class="header-item"><a href="./portfolio.html" class="header-link link">Портфолио</a></li>
                     <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="header-contacts-list list">
-                <li class="header-contact-item">
-                    <a href="mailto:info@devstudio.com" class="header-contact link">
-                        <svg class="contacts-icon" width="16" height="12">
-                            <use href="./images/icons.svg#icon-mail"></use>
-                        </svg>info@devstudio.com</a>
-                </li>
-                <li class="header-contact-item mail">
-                    <a href="tel:+380961111111" class="header-contact link">
-                        <svg class="contacts-icon" width="10" height="16">
-                            <use href="./images/icons.svg#icon-smartphone"></use>
-                        </svg>+38 096
-                        111 11 11</a>
-                </li>
+                <li class="header-contact-item"><a href="mailto:info@devstudio.com"
+                        class="header-contact link">info@devstudio.com</a></li>
+                <li class="header-contact-item mail"><a href="tel:+380961111111" class="header-contact link">+38 096
+                        111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -194,53 +184,14 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <div class="footer-address-container">
-                <a href="./index.html" lang="en" class="footer-logo"><span class="logo-web">Web</span>Studio</a>
-                <address class="address">
-                    <ul class="address-list list">
-                        <li class="address-item"><a href="https://bit.ly/3pXMvUd" target="_blank"
-                                class="address-address link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li class="address-item"><a href="mailto:info@example.com"
-                                class="address-link link">info@example.com</a></li>
-                        <li class="address-item"><a href="tel:+380991111111" class="address-link link">+38 099 111 11
-                                11</a>
-                        </li>
-                    </ul>
-                </address>
-            </div>
-            <div class="footer-container">
-                <h3 class="footer-title">присоединяйтесь</h3>
-                <ul class="footer-list list">
-                    <li class="footer-item item">
-                        <a href="" class="footer-link link">
-                            <svg class="footer-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-item item">
-                        <a href="" class="footer-link link">
-                            <svg class="footer-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-item item">
-                        <a href="" class="footer-link link">
-                            <svg class="footer-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="footer-item item">
-                        <a href="" class="footer-link link">
-                            <svg class="footer-icon" width="20" height="20">
-                                <use href="./images/icons.svg#icon-linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+            <a href="./index.html" lang="en" class="footer-logo"><span class="logo-web">Web</span>Studio</a>
+            <address class="address">
+                <ul class="address-list list">
+                    <li class="address-item"><a href="https://bit.ly/3pXMvUd" target="_blank"
+                            class="address-address link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li class="address-item"><a href="mailto:info@example.com"
+                            class="address-link link">info@example.com</a></li>
+                    <li class="address-item"><a href="tel:+380991111111" class="address-link link">+38 099 111 11 11</a>
         </div>
     </footer>
 </body>
